--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,14 @@
 *.iml
-
-/out
-
 /.idea
+target/
+pom.xml.tag
+pom.releaseBackup
+pom.versionBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+.mvn/wrapper/maven-wrapper.jar
+.project
+.classpath
